# livelybot_hal

./: .clang-format  CMakeLists.txt  package.xml
include/hal/: motor_control.h
include/hardware/: humanoid_driver.h  motor_control.h  motor_data.h  simple_hardware_node.h
include/huamanoid/: ankle_ik.h  arm_control.h  humanoid_control.h  leg_control.h
include/humanoid/: ankle_fk.h  ankle_ik.h  ankle_jacobian.h
include/utils/: event.h  fast_mutex.h  semaphore.h  synchronized.h
launch/: hardware.launch  rviz.launch
src/: ankle_test.cpp  hardware_node.cpp  motor_test.cpp  pino_test.cpp  test_motion.cpp
src/hal/: motor_control.cpp
src/hardware/: humanoid_driver.cpp  motor_control.cpp  simple_hardware_node.cpp
src/huamanoid/: ankle_fk.cpp  ankle_ik.cpp  ankle_jacobian.cpp
