<?xml version="1.0"?>
<package format="2">
    <name>livelybot_hardware</name>
    <version>0.0.0</version>
    <description>The hardware package</description>
    <maintainer email="hpx@todo.todo">hpx</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>joint_state_publisher</build_depend>
    <build_depend>joint_state_publisher_gui</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>rospy</build_depend>

    <build_export_depend>rospy</build_export_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>std_msgs</depend>
    <depend>serial</depend>
    <depend>livelybot_serial</depend>
    <depend>livelybot_msg</depend>

</package>
